force-app/main/default/objects/Work_Order_Asset__c/Work_Order_Asset__c.object-meta.xml
<CustomObject>
    <label>Work Order Asset</label>
    <nameField>
        <displayFormat>WOA{0000}</displayFormat>
        <label>Work Order Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>