force-app/main/default/objects/Work_Order_Asset__c/fields/Bar_Code__c.field-meta.xml
<CustomField>
    <fullName>Bar_Code__c</fullName>
    <label>Bar Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>