force-app/main/default/objects/Work_Order_Asset__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Work Order Assets</relationshipLabel>
    <relationshipName>Work_Order_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>