force-app/main/default/objects/Work_Order_Asset__c/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Work Order Assets (Related Product)</relationshipLabel>
    <relationshipName>Work_Order_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>