force-app/main/default/objects/Work_Order_Asset__c/fields/Scanned_Date__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Date__c</fullName>
    <label>Scanned Date</label>
    <type>Date</type>
</CustomField>