force-app/main/default/objects/Work_Order_Asset__c/fields/Survey_Asset_Location__c.field-meta.xml
<CustomField>
    <fullName>Survey_Asset_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Asset Location</label>
    <referenceTo>Survey_Asset_Location__c</referenceTo>
    <relationshipLabel>Work Order Assets</relationshipLabel>
    <relationshipName>Work_Order_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>