force-app/main/default/objects/Work_Order_Asset__c/fields/Work_Order_Room__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Location</label>
    <referenceTo>Work_Order_Room__c</referenceTo>
    <relationshipLabel>Work Order Assets</relationshipLabel>
    <relationshipName>Work_Order_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>